fix scrollbar when sending data

--- a/react/src/components/NavbarMenu.css
+++ b/react/src/components/NavbarMenu.css
@@ -74,6 +74,7 @@ nav ul li a:hover,
   
       .NavbarMenu ul li a {
         display: block;
+        width: 30%;
       }
 
       .Navbar a:hover, .active {
