--- a/react/src/views/CheckoutPage.css
+++ b/react/src/views/CheckoutPage.css
@@ -1,6 +1,3 @@
-/* .CheckoutPage {
-    color: red;
-} */
 
 /* Target Date input field text error */
 .form-control span {
@@ -70,6 +67,14 @@
 .CheckoutPage ul li {
     border-bottom: 1px solid #d8d8d8;
     margin-bottom: 1rem;
+}
+
+.CheckoutPage img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 1rem;
 }
 
 @media (max-width: 768px) {
